# crabbing-interpreters

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  bacon.toml  rust-toolchain.toml
crabbing-interpreters/: Cargo.toml
crabbing-interpreters-derive-report/: Cargo.toml
crabbing-interpreters-lex/: Cargo.toml
crabbing-interpreters-lex/src/: lib.rs
crabbing-interpreters/src/: bytecode.rs  clone_from_cell.rs  closure_compiler.rs  environment.rs  eval.rs  gc.rs  hash_map.rs  interner.rs  lex.rs  lib.rs  main.rs  nonempty.rs  parse.rs  rc_str.rs  rc_value.rs  scope.rs  value.rs
crabbing-interpreters/src/bytecode/: compiler.rs  vm.rs
crabbing-interpreters/src/bytecode/vm/: mmap_stack.rs  stack.rs
crabbing-interpreters/src/environment/: builtins.rs
crabbing-interpreters/src/gc/: heads.rs
crabbing-interpreters/src/value/: nanboxed.rs
crabbing-interpreters/tests/cases/: access_global_variable_that_is_declared_later.lox  add_bound_method.lox  add_nan.lox  assign_to_global_variable_in_function.lox  assign_to_global_variable_in_function_defined_after_function.lox  clock_function.lox  clock_function_arity.lox  compare_different_functions.lox  conditional_return_at_end_of_function.lox  deduplicated_constants.lox  error_after_multibyte_char.lox  error_around_multibyte_char.lox  error_in_lhs_of_binary_and.lox  error_in_lhs_of_binary_or.lox  error_in_rhs_of_binary_and.lox  error_in_rhs_of_binary_or.lox  error_in_unary_operator.lox  fall_off_end_of_function.lox  for_loop_opens_new_scope_for_initialiser.lox  function_call_arity_mismatch_too_few.lox  function_call_arity_mismatch_too_many.lox  function_call_parameters.lox  function_name_not_identifier.lox  function_parameter_not_identifier.lox  gc_hole_in_stack_layout.lox  gc_hole_in_stack_layout_via_call.lox  init_with_captured_this.lox  invalid_for_loop_initialiser.lox  less_than_function.lox  local_variables.lox  power.lox  read_file.lox  read_file_not_found.lox  return_in_if_else.lox  runtime_error_in_function_argument.lox  runtime_error_in_native_function_argument.lox  split_on_empty_string.lox  split_state_type_error_number_is_string.lox  split_state_type_error_string_is_number.lox  split_string_on_spaces.lox  (+4 more)
crabbing-interpreters/tests/tailrec/: test_tailrec.lox
crabbing-interpreters/tests/testsuite/: craftinginterpreters.rs  main.rs
crabbing-interpreters/tests/testsuite/snapshots/: testsuite__crabbing-interpreters__tests__cases__access_global_variable_that_is_declared_later.lox.snap  testsuite__crabbing-interpreters__tests__cases__add_bound_method.lox.snap  testsuite__crabbing-interpreters__tests__cases__add_nan.lox.snap  testsuite__crabbing-interpreters__tests__cases__assign_to_global_variable_in_function.lox.snap  testsuite__crabbing-interpreters__tests__cases__assign_to_global_variable_in_function_defined_after_function.lox.snap  testsuite__crabbing-interpreters__tests__cases__clock_function.lox.snap  testsuite__crabbing-interpreters__tests__cases__clock_function_arity.lox.snap  testsuite__crabbing-interpreters__tests__cases__compare_different_functions.lox.snap  testsuite__crabbing-interpreters__tests__cases__conditional_return_at_end_of_function.lox.snap  testsuite__crabbing-interpreters__tests__cases__deduplicated_constants.lox.snap  testsuite__crabbing-interpreters__tests__cases__error_after_multibyte_char.lox.snap  testsuite__crabbing-interpreters__tests__cases__error_around_multibyte_char.lox.snap  testsuite__crabbing-interpreters__tests__cases__error_in_lhs_of_binary_and.lox.snap  testsuite__crabbing-interpreters__tests__cases__error_in_lhs_of_binary_or.lox.snap  testsuite__crabbing-interpreters__tests__cases__error_in_rhs_of_binary_and.lox.snap  testsuite__crabbing-interpreters__tests__cases__error_in_rhs_of_binary_or.lox.snap  testsuite__crabbing-interpreters__tests__cases__error_in_unary_operator.lox.snap  testsuite__crabbing-interpreters__tests__cases__fall_off_end_of_function.lox.snap  testsuite__crabbing-interpreters__tests__cases__for_loop_opens_new_scope_for_initialiser.lox.snap  testsuite__crabbing-interpreters__tests__cases__function_call_arity_mismatch_too_few.lox.snap  testsuite__crabbing-interpreters__tests__cases__function_call_arity_mismatch_too_many.lox.snap  testsuite__crabbing-interpreters__tests__cases__function_call_parameters.lox.snap  testsuite__crabbing-interpreters__tests__cases__function_name_not_identifier.lox.snap  testsuite__crabbing-interpreters__tests__cases__function_parameter_not_identifier.lox.snap  testsuite__crabbing-interpreters__tests__cases__gc_hole_in_stack_layout.lox.snap  testsuite__crabbing-interpreters__tests__cases__gc_hole_in_stack_layout_via_call.lox.snap  testsuite__crabbing-interpreters__tests__cases__init_with_captured_this.lox.snap  testsuite__crabbing-interpreters__tests__cases__invalid_for_loop_initialiser.lox.snap  testsuite__crabbing-interpreters__tests__cases__less_than_function.lox.snap  testsuite__crabbing-interpreters__tests__cases__local_variables.lox.snap  testsuite__crabbing-interpreters__tests__cases__power.lox.snap  testsuite__crabbing-interpreters__tests__cases__read_file.lox.snap  testsuite__crabbing-interpreters__tests__cases__read_file_not_found.lox.snap  testsuite__crabbing-interpreters__tests__cases__return_in_if_else.lox.snap  testsuite__crabbing-interpreters__tests__cases__runtime_error_in_function_argument.lox.snap  testsuite__crabbing-interpreters__tests__cases__runtime_error_in_native_function_argument.lox.snap  (+1039 more)
src/: eval.rs  (+4 more)
(+110 files in other folders)
