cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
    "crabbing-interpreters",
    "crabbing-interpreters-derive-report",
    "crabbing-interpreters-lex",
    "variant-types",
    "variant-types-derive",
]

[workspace.dependencies]
bumpalo = "3.16.0"
clap = { version = "4.5.4", features = ["derive"] }
indexmap = "2.2.6"
itertools = "0.12.1"
logos = "0.14.0"
proc-macro2 = "1.0.81"
quote = "1.0.36"
regex = "1.10.4"
rustc-hash = "1.1.0"
syn = { version = "2.0.60", features = ["fold", "visit"] }

insta = { version = "1.38.0", features = ["filters"] }
insta-cmd = "0.6.0"
pretty_assertions = { version = "1.4.0", features = ["unstable"] }

[workspace.dependencies.ariadne]
git = "https://github.com/narpfel/ariadne"
branch = "underlines-for-unlabeled"
features = ["auto-color"]

[workspace.dependencies.rstest]
git = "https://github.com/narpfel/rstest"
branch = "by-reference-fixture"
default-features = false

[profile.dev.package."*"]
opt-level = "z"

[profile.perf]
inherits = "release"
debug = 2
lto = true
codegen-units = 1

[profile.clif]
inherits = "dev"
codegen-backend = "cranelift"

[profile.clif.package."*"]
opt-level = 3
codegen-backend = "llvm"
