cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
    "crabbing-interpreters",
    "crabbing-interpreters-derive-report",
    "crabbing-interpreters-lex",
    "variant-types",
    "variant-types-derive",
]

[workspace.dependencies]
bumpalo = "3.19.1"
libc = { version = "0.2.178" }
clap = { version = "4.5.53", features = ["derive"] }
indexmap = "2.12.1"
itertools = "0.14.0"
logos = "0.16.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex = "1.12.2"
rustc-hash = "2.1.1"
syn = { version = "2.0.111", features = ["fold", "visit"] }

insta = { version = "1.45.0", features = ["filters"] }
insta-cmd = "0.6.0"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
rstest = { version = "0.26.1", default-features = false }
rstest_reuse = "0.7.0"

[workspace.dependencies.ariadne]
git = "https://github.com/narpfel/ariadne"
branch = "panko"
features = ["auto-color"]

[profile.dev.package."*"]
opt-level = "z"

[profile.perf]
inherits = "release"
debug = 2
lto = true
codegen-units = 1
