[package]
name = "crabbing-interpreters-lex"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
bumpalo = "3.13.0"
logos = "0.13.0"

[dev-dependencies]
pretty_assertions = { version = "1.4.0", features = ["unstable"] }

[dev-dependencies.rstest]
git = "https://github.com/narpfel/rstest"
branch = "by-reference-fixture"
default-features = false
