[package]
name = "crabbing-interpreters"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
bumpalo = "3.13.0"
clap = { version = "4.3.4", features = ["derive"] }
crabbing-interpreters-derive-report = { path = "../crabbing-interpreters-derive-report" }
crabbing-interpreters-lex = { path = "../crabbing-interpreters-lex" }
indexmap = "2.2.6"
itertools = "0.11.0"
variant-types = { path = "../variant-types" }
variant-types-derive = { path = "../variant-types-derive" }

[dev-dependencies]
insta = { version = "1.38.0", features = ["filters"] }
insta-cmd = "0.6.0"
pretty_assertions = { version = "1.4.0", features = ["unstable"] }

[dev-dependencies.rstest]
git = "https://github.com/narpfel/rstest"
branch = "by-reference-fixture"
default-features = false
