[package]
name = "crabbing-interpreters"
version = "0.1.0"
edition = "2021"

[features]
miri_tests = []

[dependencies]
ariadne = { workspace = true }
bumpalo = { workspace = true }
clap = { workspace = true }
crabbing-interpreters-derive-report = { path = "../crabbing-interpreters-derive-report" }
crabbing-interpreters-lex = { path = "../crabbing-interpreters-lex" }
indexmap = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
variant-types = { path = "../variant-types" }
variant-types-derive = { path = "../variant-types-derive" }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
